src/LinkAPI.h


	/**
	 * the structure of the shared memory as defined by mumble Link plugin v1.2.0
	 */
	typedef struct LINKAPI_LINKED_MEMORY {
		LINKAPI_NATIVE_UINT32 version;
		LINKAPI_NATIVE_DWORD tick;
		float avatarPosition[3];
		float avatarFront[3];
		float avatarTop[3];
		wchar_t name[LINKAPI_MAX_NAME_LENGTH];
		float cameraPosition[3];
		float cameraFront[3];
		float cameraTop[3];
		wchar_t identity[LINKAPI_MAX_IDENTITY_LENGTH];
		LINKAPI_NATIVE_UINT32 context_len;
		unsigned char context[LINKAPI_MAX_CONTEXT_LENGTH];
		wchar_t description[LINKAPI_MAX_DESCRIPTION_LENGTH];
	} LINKAPI_LINKED_MEMORY;


	/**
	 * a 3D vector structure
	 */
	typedef struct LINKAPI_VECTOR_3D {
		float x;
		float y;
		float z;
	} LINKAPI_VECTOR_3D;


	/**
	 * error codes hinting at the root cause of a failure
	 */
	typedef enum LINKAPI_ERROR_CODE {
		/** no error */
		LINKAPI_ERROR_CODE_NO_ERROR = 0,
		/** no handle to the shared memory structure was received */
		LINKAPI_ERROR_CODE_NO_HANDLE = 1,
		/** no structure could be initialized */
		LINKAPI_ERROR_CODE_NO_STRUCTURE = 2,
		/** the shared memory was not initialized */
		LINKAPI_ERROR_CODE_NO_MEMORY_WAS_INITIALIZED = 3,
		/** the provided context length was out of bounds */
		LINKAPI_ERROR_CODE_CONTEXT_LENGTH_EXCEEDED = 4
	} LINKAPI_ERROR_CODE;


	/**
	 * Notifies the plugin that the data is up-to-date. commit...(...)-functions
	 * call this method at the end.
	 *
	 * This is to prevent a timeout which causes the plugin to automatically unlink.
	 * It will also re-link if the link has previously been lost ("relock").
	 *
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE commit();


	/**
	 * sets the position of the avatar
	 *
	 * location of the avatar or avatar's head where it is located in the 3D game world
	 *
	 * Using the head's position is preferred. This in particular applies when
	 * the head is not at the origin of the avatar model coordinate space. E.g. if
	 * the origin is at the feet of the model the sound will be perceived as
	 * coming from the feet instead of the head.
	 *
	 * @param x the magnitude of the x basis vector
	 * @param y the magnitude of the y basis vector
	 * @param z the magnitude of the z basis vector
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE setAvatarPosition(float x, float y, float z);


	/**
	 * Unit vector pointing out of the avatar's eyes
	 *
	 * indicates the direction the avatar or avatar's head is pointing at
	 *
	 * @return a 3D vector (look vector)
	 */
	LINKAPI_API
	LINKAPI_VECTOR_3D* getAvatarFront();


	/**
	 * sets unit vector pointing out of the avatar's eyes
	 *
	 * indicates the direction the avatar or avatar's head is pointing at
	 *
	 * Note: this vector should be perpendicular to the top vector
	 *
	 * @param x the magnitude of the x basis vector
	 * @param y the magnitude of the y basis vector
	 * @param z the magnitude of the z basis vector
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE setAvatarFront(float x, float y, float z);


	/**
	 * Unit vector pointing out of the top of the avatar's head
	 *
	 * indicates the direction that the top of the avatar or
	 * avatar's head is pointing at
	 *
	 * @return a 3D vector (the avatar's up vector)
	 */
	LINKAPI_API
	LINKAPI_VECTOR_3D* getAvatarTop();


	/**
	 * sets unit vector pointing out of the top of the avatar's head
	 *
	 * indicates the direction that the top of the avatar or
	 * avatar's head is pointing at
	 *
	 * Note: this vector should be perpendicular to the front vector
	 *
	 * @param x the magnitude of the x basis vector
	 * @param y the magnitude of the y basis vector
	 * @param z the magnitude of the z basis vector
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE setAvatarTop(float x, float y, float z);


	/**
	 * The position of the camera
	 *
	 * location of the camera where it is located in the 3D game world
	 *
	 * @return a 3D vector
	 */
	LINKAPI_API
	LINKAPI_VECTOR_3D* getCameraPosition();


	/**
	 * sets the position of the camera
	 *
	 * location of the camera where it is located in the 3D game world
	 *
	 * @param x the magnitude of the x basis vector
	 * @param y the magnitude of the y basis vector
	 * @param z the magnitude of the z basis vector
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE setCameraPosition(float x, float y, float z);


	/**
	 * Unit vector pointing out of the front/lens of the camera
	 *
	 * indicates the direction the camera is pointing at
	 *
	 * @return a 3D vector (look vector)
	 */
	LINKAPI_API
	LINKAPI_VECTOR_3D* getCameraFront();


	/**
	 * sets unit vector pointing out of the front/lens of the camera
	 *
	 * indicates the direction the camera is pointing at
	 *
	 * Note: this vector should be perpendicular to the top vector
	 *
	 * @param x the magnitude of the x basis vector
	 * @param y the magnitude of the y basis vector
	 * @param z the magnitude of the z basis vector
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE setCameraFront(float x, float y, float z);


	/**
	 * Unit vector pointing out of the top of the camera
	 *
	 * indicates the direction that the top of the camera is pointing at
	 *
	 * @return a 3D vector (the camera's up vector)
	 */
	LINKAPI_API
	LINKAPI_VECTOR_3D* getCameraTop();


	/**
	 * sets unit vector pointing out of the top of the camera
	 *
	 * indicates the direction that the top of the camera is pointing at
	 *
	 * Note: this vector should be perpendicular to the front vector
	 *
	 * @param x the magnitude of the x basis vector
	 * @param y the magnitude of the y basis vector
	 * @param z the magnitude of the z basis vector
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE setCameraTop(float x, float y, float z);


	/**
	 * directly manipulate the entire linked memory at once
	 *
	 * IMPORTANT: Note that you should also update tick yourself, else a timeout
	 * will occur and your data will not be read. Subsequently calling the
	 * commit()-function once will not help when tick is always set to the same
	 * value.
	 *
	 * Notice: Parts of this does not need to be updated every single frame.
	 * Please use the more directly appropriate commit...(...) functions instead.
	 *
	 * @param source data structure which is to be copied
	 *
	 * @return	an error code, see <code>enum LINKAPI_ERROR_CODE</code>
	 */
	LINKAPI_API
	LINKAPI_ERROR_CODE setData(LINKAPI_LINKED_MEMORY *source);


	/**
	 * the entire shared memory for direct access
	 *
	 * @return a pointer to the shared memory structure
	 */
	LINKAPI_API
	LINKAPI_LINKED_MEMORY* getData();