tests/java/src/zsawyer/mumble/bridj/LinkAPILibrary.java


	/**
	 * sets the position of the avatar
	 *
	 * location of the avatar or avatar's head where it is located in the 3D
	 * game world
	 *
	 * Using the head's position is preferred. This in particular applies when
	 * the head is not at the origin of the avatar model coordinate space. E.g.
	 * if
	 * the origin is at the feet of the model the sound will be perceived as
	 * coming from the feet instead of the head.
	 *
	 * @param x the magnitude of the x basis vector
	 * @param y the magnitude of the y basis vector
	 * @param z the magnitude of the z basis vector
	 *
	 * @return an error code {@link LINKAPI_ERROR_CODE}
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE setAvatarPosition(float, float, float)</code><br>
	 * <i>native declaration : line 528</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> setAvatarPosition(
			float x, float y, float z);

	/**
	 * Unit vector pointing out of the avatar's eyes
	 *
	 * indicates the direction the avatar or avatar's head is pointing at
	 *
	 * @return a 3D vector (look vector)
	 */
	/*
	 * Original signature :
	 * <code>float* getAvatarFront()</code><br>
	 * <i>native declaration : line 538</i>
	 */
	native public static Pointer<Float> getAvatarFront();

	/**
	 * sets unit vector pointing out of the avatar's eyes
	 *
	 * indicates the direction the avatar or avatar's head is pointing at
	 *
	 * Note: this vector should be perpendicular to the top vector
	 *
	 * @param x the magnitude of the x basis vector
	 * @param y the magnitude of the y basis vector
	 * @param z the magnitude of the z basis vector
	 *
	 * @return an error code {@link LINKAPI_ERROR_CODE}
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE setAvatarFront(float, float, float)</code><br>
	 * <i>native declaration : line 553</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> setAvatarFront(
			float x, float y, float z);

	/**
	 * Unit vector pointing out of the top of the avatar's head
	 *
	 * indicates the direction that the top of the avatar or
	 * avatar's head is pointing at
	 *
	 * @return a 3D vector (the avatar's up vector)
	 */
	/*
	 * Original signature :
	 * <code>float* getAvatarTop()</code><br>
	 * <i>native declaration : line 564</i>
	 */
	native public static Pointer<Float> getAvatarTop();

	/**
	 * sets unit vector pointing out of the top of the avatar's head
	 *
	 * indicates the direction that the top of the avatar or
	 * avatar's head is pointing at
	 *
	 * Note: this vector should be perpendicular to the front vector
	 *
	 * @param x the magnitude of the x basis vector
	 * @param y the magnitude of the y basis vector
	 * @param z the magnitude of the z basis vector
	 *
	 * @return an error code {@link LINKAPI_ERROR_CODE}
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE setAvatarTop(float, float, float)</code><br>
	 * <i>native declaration : line 580</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> setAvatarTop(
			float x, float y, float z);

	/**
	 * The position of the camera
	 *
	 * location of the camera where it is located in the 3D game world
	 *
	 * @return a 3D vector
	 */
	/*
	 * Original signature :
	 * <code>float* getCameraPosition()</code><br>
	 * <i>native declaration : line 590</i>
	 */
	native public static Pointer<Float> getCameraPosition();

	/**
	 * sets the position of the camera
	 *
	 * location of the camera where it is located in the 3D game world
	 *
	 * @param x the magnitude of the x basis vector
	 * @param y the magnitude of the y basis vector
	 * @param z the magnitude of the z basis vector
	 *
	 * @return an error code {@link LINKAPI_ERROR_CODE}
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE setCameraPosition(float, float, float)</code><br>
	 * <i>native declaration : line 603</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> setCameraPosition(
			float x, float y, float z);

	/**
	 * Unit vector pointing out of the front/lens of the camera
	 *
	 * indicates the direction the camera is pointing at
	 *
	 * @return a 3D vector (look vector)
	 */
	/*
	 * Original signature :
	 * <code>float* getCameraFront()</code><br>
	 * <i>native declaration : line 613</i>
	 */
	native public static Pointer<Float> getCameraFront();

	/**
	 * sets unit vector pointing out of the front/lens of the camera
	 *
	 * indicates the direction the camera is pointing at
	 *
	 * Note: this vector should be perpendicular to the top vector
	 *
	 * @param x the magnitude of the x basis vector
	 * @param y the magnitude of the y basis vector
	 * @param z the magnitude of the z basis vector
	 *
	 * @return an error code {@link LINKAPI_ERROR_CODE}
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE setCameraFront(float, float, float)</code><br>
	 * <i>native declaration : line 628</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> setCameraFront(
			float x, float y, float z);

	/**
	 * Unit vector pointing out of the top of the camera
	 *
	 * indicates the direction that the top of the camera is pointing at
	 *
	 * @return a 3D vector (the camera's up vector)
	 */
	/*
	 * Original signature :
	 * <code>float* getCameraTop()</code><br>
	 * <i>native declaration : line 638</i>
	 */
	native public static Pointer<Float> getCameraTop();

	/**
	 * Unit vector pointing out of the top of the camera
	 *
	 * indicates the direction that the top of the camera is pointing at
	 *
	 * Note: this vector should be perpendicular to the front vector
	 *
	 * @param x the magnitude of the x basis vector
	 * @param y the magnitude of the y basis vector
	 * @param z the magnitude of the z basis vector
	 *
	 * @return an error code {@link LINKAPI_ERROR_CODE}
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE setCameraTop(float, float, float)</code><br>
	 * <i>native declaration : line 653</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> setCameraTop(
			float x, float y, float z);

	/**
	 * Original signature :
	 * <code>int getUiVersion()</code><br>
	 * <i>native declaration : line 656</i>
	 */
	native public static int getUiVersion();

	/**
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE setUiVersion(int)</code><br>
	 * <i>native declaration : line 658</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> setUiVersion(
			int version);

	/**
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE commitUiVersion(int)</code><br>
	 * <i>native declaration : line 660</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> commitUiVersion(
			int version);

	/**
	 * tick counter which is used to tell if updates to the shared memory occur
	 *
	 * If this number stays the same the rest of the shared memory is not read
	 * by the link plugin and it will unlink after a certain timeout.
	 *
	 * @return the last tick number
	 */
	/*
	 * Original signature :
	 * <code>DWORD getUiTick()</code><br>
	 * <i>native declaration : line 671</i>
	 */
	native public static int getUiTick();

	/**
	 * sets the tick counter which is used to tell if updates to the shared
	 * memory occured
	 *
	 * If this number stays the same the rest of the shared memory is not read
	 * by the link plugin and it will unlink after a certain timeout.
	 *
	 * If the plugin is already unlinked updating this value does not re-link,
	 * for this to happen uiVersion needs to be updated too.
	 * Use
	 * <code>commitUiTick(...)</code> to clean-up the linked memory and
	 * enforce a re-link.
	 *
	 * @param tick the tick number to set
	 *
	 * @return an error code {@link LINKAPI_ERROR_CODE}
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE setUiTick(DWORD)</code><br>
	 * <i>native declaration : line 688</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> setUiTick(
			int tick);

	/**
	 * set and commit the tick counter which is used to tell if updates to the
	 * shared memory occured
	 *
	 * If this number stays the same the rest of the shared memory is not read
	 * by the link plugin and it will unlink after a certain timeout.
	 *
	 * @param tick the tick number to set
	 *
	 * @return an error code {@link LINKAPI_ERROR_CODE}
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE commitUiTick(DWORD)</code><br>
	 * <i>native declaration : line 700</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> commitUiTick(
			int tick);

	/**
	 * directly manipulate the entire linked memory at once
	 *
	 * IMPORTANT: Note that you should also update uiTick yourself, else a
	 * timeout will occur and your data will not be read. Subsequently calling
	 * the commit()-function once will not help when uiTick is always set to the
	 * same value.
	 *
	 * Notice: Parts of this does not need to be updated every single frame.
	 * Please use the more directly appropriate commit...(...) functions
	 * instead.
	 *
	 * @param source data structure which is to be copied
	 *
	 * @return an error code {@link LINKAPI_ERROR_CODE}
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_ERROR_CODE setData(LINKAPI_LINKED_MEMORY*)</code><br>
	 * <i>native declaration : line 718</i>
	 */
	native public static IntValuedEnum<LinkAPILibrary.LINKAPI_ERROR_CODE> setData(
			Pointer<LinkAPILibrary.LINKAPI_LINKED_MEMORY> source);

	/**
	 * the entire shared memory for direct access
	 *
	 * @return a pointer to the shared memory structure
	 */
	/*
	 * Original signature :
	 * <code>LINKAPI_LINKED_MEMORY* getData()</code><br>
	 * <i>native declaration : line 726</i>
	 */
	native public static Pointer<LinkAPILibrary.LINKAPI_LINKED_MEMORY> getData();
}
